yaml_docker/deploy-was.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-login
  namespace: was
  annotations:
    kubernetes.io/change-cause: was:v1.0
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: was-login
  template:
    metadata:
      labels:
        app: was-login
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - was-login
                topologyKey: "kubernetes.io/hostname"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: was-login
      containers:
        - image: ysryu/tomcat-main:v1.0
          name: was-login
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              cpu: 250m
              memory: 250Mi
          livenessProbe:
            httpGet:
              path: /login.jsp
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /login.jsp
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: persistent-storage
              mountPath: /usr/local/tomcat/webapps/ROOT/
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: pvc-was-login
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-main
  namespace: was
  annotations:
    kubernetes.io/change-cause: was:v1.0
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: was-main
  template:
    metadata:
      labels:
        app: was-main
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - was-main
                topologyKey: "kubernetes.io/hostname"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: was-main
      containers:
        - image: ysryu/tomcat-main:v1.0
          name: was-main
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              cpu: 250m
              memory: 250Mi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: persistent-storage
              mountPath: /usr/local/tomcat/webapps/ROOT/
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: pvc-was-main
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-order
  namespace: was
  annotations:
    kubernetes.io/change-cause: was:v1.0
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: was-order
  template:
    metadata:
      labels:
        app: was-order
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - was-order
                topologyKey: "kubernetes.io/hostname"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: was-order
      containers:
        - image: ysryu/tomcat-order:v1.0
          name: was-order
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              cpu: 250m
              memory: 250Mi
          livenessProbe:
            httpGet:
              path: /order.jsp
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /order.jsp
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: persistent-storage
              mountPath: /usr/local/tomcat/webapps/ROOT/
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: pvc-was-order
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-reservation
  namespace: was
  annotations:
    kubernetes.io/change-cause: was:v1.0
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: was-reservation
  template:
    metadata:
      labels:
        app: was-reservation
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - was-reservation
                topologyKey: "kubernetes.io/hostname"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: was-reservation
      containers:
        - image: ysryu/tomcat-reservation:v1.0
          name: was-reservation
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              cpu: 250m
              memory: 250Mi
          livenessProbe:
            httpGet:
              path: /reservation.jsp
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /reservation.jsp
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: persistent-storage
              mountPath: /usr/local/tomcat/webapps/ROOT/
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: pvc-was-reservation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was-signup
  namespace: was
  annotations:
    kubernetes.io/change-cause: was:v1.0
spec:
  replicas: 2
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: was-signup
  template:
    metadata:
      labels:
        app: was-signup
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - was-signup
                topologyKey: "kubernetes.io/hostname"
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: was-signup
      containers:
        - image: ysryu/tomcat-signup:v1.0
          name: was-signup
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 250Mi
            limits:
              cpu: 250m
              memory: 250Mi
          livenessProbe:
            httpGet:
              path: /signup.jsp
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /signup.jsp
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: persistent-storage
              mountPath: /usr/local/tomcat/webapps/ROOT/
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: pvc-was-signup
