yaml_docker/service-was.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-was-login
  namespace: was
spec:
  clusterIP: 172.20.24.24
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: was-login
---
apiVersion: v1
kind: Service
metadata:
  name: svc-was-main
  namespace: was
spec:
  clusterIP: 172.20.24.44
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: was-main
---
apiVersion: v1
kind: Service
metadata:
  name: svc-was-order
  namespace: was
spec:
  clusterIP: 172.20.24.64
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: was-order
---
apiVersion: v1
kind: Service
metadata:
  name: svc-was-reservation
  namespace: was
spec:
  clusterIP: 172.20.24.84
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: was-reservation
---
apiVersion: v1
kind: Service
metadata:
  name: svc-was-signup
  namespace: was
spec:
  clusterIP: 172.20.24.104
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: was-signup
